@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - Ensure we do a deep clone of paths in canvas save()
 
 0.1.0  2022-02-06T07:29:38+13:00
    - Add HTML::Canvas::Graphic role 
